[package]
name = "rust-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres","macros"] }
tokio = { version = "1.47.1", features = ["net", "macros"] }
dotenv = "0.15" 
